--- a/DoctorsOffice/Views/Patients/Index.cshtml
+++ b/DoctorsOffice/Views/Patients/Index.cshtml
@@ -56,6 +56,7 @@
             </td>
 
             <td class="text-bold">
+                @Html.ActionLink("Patients Examinations", "ExaminationList", new { patientId = item.ID }) | 
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.ID }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
