Tried but not implemented upload in exams

--- a/DoctorsOffice/Views/Doctors/Details.cshtml
+++ b/DoctorsOffice/Views/Doctors/Details.cshtml
@@ -81,3 +81,7 @@
     <strong class="back-link">@Html.ActionLink("Edit", "Edit", new { id = Model.Doctor.DoctorID }) | </strong>
     <strong class="back-link">@Html.ActionLink("Back to List", "Index")</strong>
 </p>
+<hr />
+<div class="col-md-6">
+    <a href="https://pngtree.com/" class="pr-5 dark-text">Default doctor photo graphic from pngtree.com</a>
+</div>
