--- a/DoctorsOffice/Views/Doctors/Edit.cshtml
+++ b/DoctorsOffice/Views/Doctors/Edit.cshtml
@@ -95,6 +95,10 @@
     </form>
 
 </div>
+<hr />
+<div class="col-md-6">
+    <a href="https://pngtree.com/" class="pr-5 dark-text">Default doctor photo graphic from pngtree.com</a>
+</div>
 
 }
 @section Scripts {
