--- a/DoctorsOffice/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DoctorsOffice/Views/Account/ExternalLoginConfirmation.cshtml
@@ -25,6 +25,20 @@
         </div>
     </div>
     <div class="form-group dark-text">
+        @Html.LabelFor(m => m.FullName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.FullName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group dark-text">
+        @Html.LabelFor(m => m.NickName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.NickName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.NickName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group dark-text">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn btn-default dark-blue-bckg light-text" value="Register">Register</button>
         </div>
