--- a/DoctorsOffice/Views/Account/Register.cshtml
+++ b/DoctorsOffice/Views/Account/Register.cshtml
@@ -18,6 +18,20 @@
         </div>
     </div>
     <div class="form-group dark-text">
+        @Html.LabelFor(m => m.FullName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FullName, new { @class = "form-control input-fields" })
+            @Html.ValidationMessageFor(m => m.FullName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group dark-text">
+        @Html.LabelFor(m => m.NickName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.NickName, new { @class = "form-control input-fields" })
+            @Html.ValidationMessageFor(m => m.NickName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group dark-text">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control input-fields" })
