Role manager activated and roles made

--- a/DoctorsOffice/Views/Shared/_Layout.cshtml
+++ b/DoctorsOffice/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                 <li class="nav-item px-2 light-text">
                     @Html.ActionLink("Examinations", "Index", "Examinations")
                 </li>
+                <li class="nav-item px-2 light-text">
+                    @Html.ActionLink("Administration", "Index", "Administration")
+                </li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
