--- a/DoctorsOffice/Views/Account/Login.cshtml
+++ b/DoctorsOffice/Views/Account/Login.cshtml
@@ -57,6 +57,12 @@
         </section>
     </div>
 </div>
+<div class="text-small">
+    <p>*Admin credentials (for demo purposes only):</p>
+    <p>Email: admin@admin.com</p>
+    <p>Password: Admin#1</p>
+</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
