About and contact page changed, and unnecessary comments erased

--- a/DoctorsOffice/Views/Home/About.cshtml
+++ b/DoctorsOffice/Views/Home/About.cshtml
@@ -6,3 +6,5 @@
 
 <p class="dark-text">This application is build as study project. Creator is Julijana Ugrinov. 
     Main goal was to learn how MVC and Entity works, and resolve all kind of problems that comes along...</p>
+<p>To see Doctors, Patients or Examinations page, you must be registrated and loggedin user.</p>
+<p>You must confirm registration with email to proceede to log in.</p>
