Small change in contact page

--- a/DoctorsOffice/Views/Home/Contact.cshtml
+++ b/DoctorsOffice/Views/Home/Contact.cshtml
@@ -6,6 +6,6 @@
 
 <address class="dark-text">
     <strong>Email:</strong>   <a href="mailto:jugrinov@gmail.com">jugrinov@gmail.com</a><br />
-    <strong>Other projects:</strong> <a href="https://julkazr.github.io/" target="_blank">My Portfolio</a>
+    <strong>Other projects:</strong> <a href="https://julkazr.github.io/" target="_blank">My Portfolio</a><br />
     <strong>My contact is, also, in my portfolio.</strong>
 </address>
