Small changes in admin translator and index

--- a/DoctorsOffice/Views/Administration/Index.cshtml
+++ b/DoctorsOffice/Views/Administration/Index.cshtml
@@ -15,7 +15,7 @@
 {
     <div class="row">
         <p class="col-lg-6 form-inline dark-text text-bold">
-            Find patient by name:
+            Find user by name:
             @Html.TextBox("searchByUserName", Model.CurrentFilter as string, new { @class = "form-control ml-2 input-fields" })
             <button type="submit" class="btn btn-default ml-2 dark-blue-bckg light-text">Search</button>
         </p>
