--- a/DoctorsOffice/Views/Administration/Index.cshtml
+++ b/DoctorsOffice/Views/Administration/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DoctorsOffice.ViewModels.AdministrationListViewModel
+﻿@model PagedList.IPagedList<DoctorsOffice.ViewModels.AdministrationListViewModel>
 @using PagedList;
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
@@ -45,7 +45,7 @@
                 @Html.DisplayFor(modelItem => item.UserEmail)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Role)
+                @Html.DisplayFor(modelItem => item.Roles)
             </td>
 
             <td class="text-bold">
